--- a/vs_code/MyFirstApp/Views/Home/About.cshtml
+++ b/vs_code/MyFirstApp/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use thisss area to provide additional information.</p>
+<p>Use thissss area to provide additional information.</p>
